Se ajusta dockerfile